Feat: enhance nearbyFilter
