# src/routes/restaurant.route.js
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { createRestaurantValidator, nearbyRestaurantValidator, deleteRestaurantValidator, updateRestaurantValidator, nearbyByAddressValidator } from "../validators/restaurantValidator.js";
+import { createRestaurantValidator, nearbyRestaurantValidator, deleteRestaurantValidator, updateRestaurantValidator, nearbyFilterValidator } from "../validators/restaurantValidator.js";
 import { validate } from "../middlewares/validate.js";
 import * as restaurantCtrl from "../controllers/restaurant.controller.js";
 
@@ -9,9 +9,8 @@ router.post("/create", createRestaurantValidator, validate, restaurantCtrl.creat
 router.put("/update/:id", updateRestaurantValidator, validate, restaurantCtrl.update);
 router.delete("/delete/:id", deleteRestaurantValidator, validate, restaurantCtrl.remove);
 router.get("/nearby", nearbyRestaurantValidator, validate, restaurantCtrl.nearby);
-router.get("/nearbyFilter", restaurantCtrl.nearbyfilter);
+router.get("/nearbyfilter",nearbyFilterValidator, validate, restaurantCtrl.nearbyFilter);
 router.get("/getall", restaurantCtrl.getAll);
-router.get("/nearbybyaddress",nearbyByAddressValidator, restaurantCtrl.nearbyByAddress);
 
 
 
